MyFirstForceProject/src/objects/Levi_s_Formals__c.object
<CustomObject>
    <description>Formal apparels sold by Levi</description>
    <fields>
        <fullName>Formals_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Formals_Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formals_URL__c</fullName>
        <description>URL for formals images</description>
        <label>Formals_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Formals_clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>clearance</description>
        <label>Formals_clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formals_cloth__c</fullName>
        <defaultValue>&quot;Not-specified&quot;</defaultValue>
        <description>type of cloth</description>
        <label>Formals_cloth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formals_discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>discount on formals</description>
        <label>Formals_discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Formals_price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>total price of the product</description>
        <label>Formals_price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formals_size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>size</description>
        <label>Formals_size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Levi&apos;s Formals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levi&apos;s Formals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>